- Positioned the proposals and sponsors blocks side-by-side, rotated slightly - Enlarged the video slightly to align with everything - Repositioned the footer's content at 9 columns breakpoint - Fixed the carleton logo not appearing properl/y

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -188,11 +188,22 @@ footer
     margin: 0 0 1em
   .twitter-follow-button
     margin-bottom: 1em
+  +at-breakpoint(45em 5)
+    background-color: transparent
+    h2
+      +span-columns(1, 5)
+    .twitter-follow-button
+      +span-columns(4, 5)
+    #subscribe
+      +prefix(1)
+      +span-columns(4, 5)
 
 #promovideo
   margin: 0 auto
   .twitter-share-button
     margin-top: 0.5em
+  +at-breakpoint(45em 9)
+    margin: 0 -1em
 
 p.note
   font-size: 0.6875em /* 11 / 16 = 0.6875 */
@@ -211,13 +222,36 @@ p.theme
   font-weight: $weight-semibold
   color: $primary-gray
 
-.home div#proposals, .home div#sponsors
-  +at-breakpoint(45em 9)
++at-breakpoint(45em 9)
+  .home div#proposals, .home div#sponsors
     background: white
-    margin: 1em -1em
+    margin: 1em 3em 2em -1em
     padding: 1em
-
+    float: left
+    max-width: 20em
+    h2
+      margin-top: 0
+    *:last-child
+      margin-bottom: 0
+    -webkit-box-shadow:  0px 30px 30px -30px rgba(0, 0, 0, .5)
+    box-shadow:  0px 30px 30px -30px rgba(0, 0, 0, .5)
+  .home div#proposals
+    transform: rotate(1deg)
+    -ms-transform: rotate(1deg) /* IE 9 */
+    -moz-transform: rotate(1deg) /* Firefox */
+    -webkit-transform: rotate(1deg) /* Safari and Chrome */
+    -o-transform: rotate(1deg) /* Opera */
+    
+  .home div#sponsors
+    margin-right: -1em
+    transform: rotate(-1deg)
+    -ms-transform: rotate(-1deg) /* IE 9 */
+    -moz-transform: rotate(-1deg) /* Firefox */
+    -webkit-transform: rotate(-1deg) /* Safari and Chrome */
+    -o-transform: rotate(-1deg) /* Opera */
+    
 #organizers
+  clear: left
   background-color: $charcoal
   background-image: -moz-radial-gradient(50% 50%, circle closest-side, $charcoal, $charcoal 8em, darken($charcoal, 5%) 11em)
   background-image: -webkit-radial-gradient(50% 50%, circle closest-side, $charcoal, $charcoal 8em, darken($charcoal, 5%) 11em)
@@ -254,7 +288,7 @@ p.theme
     height: 72px
     background-position: 0, 0
     margin: 10px 23px 20px 0
-  .carleton-logow
+  .carleton-logo
     width: 140px
     height: 35px
     background-position: -106px -22px
